lifecycle-hooks-learned

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,35 @@
   <hr />
   <div class="row">
     <div class="col-xs-12">
+      <div class="btn-group">
+        <button class="btn btn-success" (click)="onChangeFirst()">
+          Change First Element
+        </button>
+        <button class="btn btn-danger" (click)="onDestroyFirst()">
+          Destroy
+        </button>
+      </div>
+      <br />
+      <br />
+      <!-- Loop through serverElements and display content in Bootstrap cards -->
       <app-server-element
-        *ngFor="let serverElement of serverElements"
+        class="card"
         [srvElement]="serverElement"
-      ></app-server-element>
+        [name]="serverElement.name"
+        *ngFor="let serverElement of serverElements">
+        <p> #CONTENT PARAGRAPH</p>
+        <div class="card-body">
+          <h5 class="card-title">{{ serverElement.name }}</h5>
+          <p class="card-text">
+            <strong *ngIf="serverElement.type === 'server'" style="color: red">
+              {{ serverElement.content }}
+            </strong>
+            <em *ngIf="serverElement.type === 'blueprint'" style="color: blue">
+              {{ serverElement.content }}
+            </em>
+          </p>
+        </div>
+      </app-server-element>
     </div>
   </div>
 </div>
