--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #0880e8;
+  }
+  
+  a:hover {
+    color: #2b99f8;
+    text-decoration: none !important;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Raleway", sans-serif;
+  }
+
+@import '~animate.css/animate.min.css';
+/* @import 'aos/dist/aos.css'; */
+
