--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
 <main id="main">
   <app-icon-box></app-icon-box>
   <app-about-us></app-about-us>
-  <!-- <app-client></app-client> -->
+  <app-client></app-client>
   <app-why-us></app-why-us>
   <app-service></app-service>
   <app-home></app-home>
