--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,9 @@
   <app-client></app-client>
   <app-why-us></app-why-us>
   <app-service></app-service>
+  <app-cta></app-cta>
+  <!-- <app-portfolio></app-portfolio> -->
+  <app-team></app-team>
   <app-home></app-home>
   <app-footer></app-footer>
 </main>
